# respice

./: CMakeLists.txt
src/: CMakeLists.txt  drmresolutionwindow.cpp  drmresolutionwindow.h  logind.cpp  logind.h  main.cpp  udev.h
